# auto-agent-new

./: .gitignore  langgraph.json  pyproject.toml
.data/sample_task_documents/: Table Of Contents.md
.data/sample_task_documents/docs/: sql_server_command_line_guide.md
.data/sample_task_documents/docs/etl/: LLM_Guide_Data_Quality_Rules_Framework.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: __main__.py
app/agents/: configuration.py
app/agents/codeact_agent/: __init__.py  _graph.py  codeact_agent.py  codeact_graph.py  execution_context.py  schemas.py  test_codeact.py  test_phase2.py
app/agents/codeact_agent/prompts/: __init__.py  codeact_system.md
app/agents/main_agent/: _graph.py  main_agent.py  main_graph.py  schemas.py
app/agents/main_agent/nodes/: chat.py
app/agents/prompts/: __init__.py  chat_system.md  chat_user.md
app/agents/utils/: __init__.py  extract_user_message.py
app/api/: app.py
app/api/v1/routes/: api.py
app/core/: __init__.py  logging.py
app/core/config/: constants.py  settings.py
docs/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PHASES.md  research-report-agentic-systems.md  technical-implementation-analysis.md
