[project]
name = "auto-agent-new"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langfuse>=3.2.1",
    "langgraph>=0.6.0",
    "langgraph-cli[inmem]>=0.3.6",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "seaborn>=0.13.2",
    "smolagents",
    "sqlalchemy>=2.0.0",
    "structlog>=25.4.0",
]
